# candyLand

./: CMakeLists.txt  README.md  main.cpp
Assets/: record.txt
GUI/: Menu.cpp  Menu.h
GameCharacter/: GameCharacter.cpp  GameCharacter.h  Hero.cpp  Hero.h
GameCharacter/Enemy/: Archer.cpp  Archer.h  Boss.cpp  Boss.h  Brawler.cpp  Brawler.h  Enemy.cpp  Enemy.h  Watcher.cpp  Watcher.h
GameLogic/: AssetManager.cpp  AssetManager.h  GameEngine.cpp  GameEngine.h  GameFactory.cpp  GameFactory.h  Observer.cpp  Observer.h  ScoreObserver.cpp  ScoreObserver.h  ScoreSubject.cpp  ScoreSubject.h  Subject.cpp  Subject.h  TimeObserver.h  TimeSubject.h  Timer.cpp  Timer.h
GameLogic/State/: GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  RecordInsState.cpp  RecordInsState.h  RecordState.cpp  RecordState.h  StateHandler.cpp  StateHandler.h
GameObjects/: Bullet.cpp  Bullet.h  Candy.cpp  Candy.h  Platform.cpp  Platform.h  Star.cpp  Star.h
unit_testing/: CMakeLists.txt  collisionTest.cpp  enemyTest.cpp  factoryTest.cpp  heroTest.cpp
